AA-2002-01-09-0: Enhancem.: openssl lib path, I18N Linux uses libc gettext
                            -> changes in aimk

JG-2002-01-09-0: Enhancem.: qconf -ke has to be called with a host(list) or
                            the keyword "all". qconf -ke without hostlist no
                            longer kills all hosts.
                 Issue:     #83           

CR-2002-01-08-0: Testsuite: 
                    - New settings file version "4" because of new parameters
                      "dns_domain_name" and "user_environment".
                    - unsetting GRD_ROOT and CODINE_ROOT variables (if set) at
                      startup 
                    - qmod/reschedule test is now testing more, but still not
                      full implemented.
                    - changed output of handle_vi_edit()
                    - new parser procedure parse_qconf_se()
                    - commented open_root_spawn_process() this procedure
                      should not be used anymore. 
                      open_remote_spawn_process() should be used therefor.
                    - new procedures: 
                         get_complex(), set_complex(), get_qconf_se_info()
                    - enhanced sumbit_job() for specific error value handling                           
                    - new check:
                         system_tests/qmaster/complex

JG-2002-01-08-0: Enhancem.: Made "with I18N" default for solaris, solaris64
                            and glinux architectures.
                            Fixed broken build with I18N.

AH-2002-01-08-0: Cleanup:   Removed old and unused starter code in shepherd

JG-2002-01-07-1: Testsuite: handle_vi_edit sometimes "worked too fast" 
                            (modified file had same timestamp as original).
                            Added a sleep of one second.

JG-2002-01-07-0: Bugfix:    Fixed a memory leak in execd.